Finished preliminary outcomes for COMP 1020

--- a/existing/COMP 1020.md
+++ b/existing/COMP 1020.md
@@ -223,15 +223,127 @@ abstractions that wrap `FileReader`, like `BufferedReader`?
 
 ### Week 7: OOP Polymorphism 1
 
+* Give a real-world example of subtypes/specialization. (person -> {student,faculty})
+* Create and use a "subclass" in a Java program.
+* Define the terms "subclass"/"derived class", "superclass".
+* Draw a diagram of a simple class hierarchy.
+* Explain how a subclass affects a superclass.
+* Write a superclass/subclass pair with multiple, non-default constructors.
+* Explicitly call the constructor of a superclass in a subclass constructor with
+  the `super` keyword.
+* Explain what happens when a superclass and subclass implement a method with
+  the same signature.
+* Write a subclass that overrides the behaviour of a superclass.
+* Call a method in the superclass with the `super`-dot-notation.
+* Describe the scopes of two instance variables in subclass and superclass that
+  have the same name.
+* Explain how visibility modifiers affect the relationship between subclass and
+  superclass.
+* Decide if a subclass can call a method in a superclass given its visibility
+  modifier.
+* Write methods and declare instance variables in a superclass that subclass
+  cannot call or use (`private`).
+* Write methods and declare instance variables in a superclass that a subclass
+  may call or use, but code *outside* the hierarchy cannot use. (`protected`).
+* Explain the relationship between the type defined on the left side of an
+  assignment operator and the type on the right side of an assignment operator.
+  (Subclass can be assigned to superclass, but not vice-versa).
+* Cast an instance of a superclass to a subclass.
+* Check the type of an instance with the `instanceof` operator.
+* Safely cast an instance of a variable.
+* Describe the relationship between `Object` and all other class instances in
+  Java.
+* List the methods that are inherited from the `Object` class.
+* Define the term "polymorphism".
+* Given a class hierarchy and code fragment, decide which method in the class
+  hierarchy would be called.
+* Write a Java program that uses polymorphism.
+* Define the term "abstract class".
+* Write an abstract class in a Java program.
+* Explain how polymorphism is related to the concept of abstract classes.
+* Use a library in a Java program to draw graphics. (specifically refers to
+  `StdDraw`, but processing could probably fit in here)
+
 ### Week 8: OOP Polymorphism 2
+
+**Note**: Week 8 is marked specifically as "Object hierarchies - example". My
+interpretation of this is that we shouldn't be getting any new outcomes here,
+just examples of how to apply outcomes from week 7.
+
+* Decompose a domain model into a hierarchy of related classes.
+* Draw a diagram representing related classes in a hierarchy.
+* Decide which class in a hierarchy of classes should have a property.
+* Create and call a constructor in an abstract superclass.
+* Decide which class in a hierarchy of classes should have a behaviour.
 
 ### Week 9: Strings, ArrayLists
 
+* List and use more `String` class instance methods.
+* Create and use instances of the Java-specific `ArrayList` class.
+* Use the Java-specific "generics" implementation.
+* Compare and contrast arrays and `ArrayList` (or, more generally, the `List`
+  interface).
+* Use Java-specific wrapper classes for primitive types.
+* Define the terms "boxing" and "unboxing" with relation to wrapping primitive
+  types in classes.
+
 ### Week 10: Linked lists
+
+* Define the term "list".
+* Give examples of lists.
+* List properties of lists (insertion/deletion time, access time, etc.)
+* List properties of arrays (contiguous memory allocation, fixed size, etc.)
+* Create and use a linked list data structure in a program.
+* Write a method to add a node to the top of a linked list data structure.
+* Write a method to iterate over the nodes of a linked list data structure.
+* Write a method to insert a node in an arbitrary position of a linked list data
+  structure.
+* Write a method to delete a node from a linked list data structure by key or by
+  index.
+* Write a method to do an ordered insert on a linked list data structure.
 
 ### Week 11: Recursion
 
-### Week 12: Sorting
+* Give an example of a recursive function.
+* Write a recursive implementation of the factorial function.
+* Define the terms "recursion", "stack overflow", and "base case".
+* Draw a diagram representing the state of a stack of method calls in a
+  recursive function.
+* Create a recursive solution to a problem.
+* Write a recursive solution to a problem with a "helper" function.
+* Write a recursive program to generate permutations of a sequence.
+* Write a recursive program to generate all subsets of a sequence.
+* Give an example of when recursion is not an appropriate solution to a problem.
+
+### Week 12: Searching and sorting
+
+* Define the term "searching".
+* Give examples of search algorithms for arrays/lists/sequences.
+* List the data requirements for a binary search algorithm to be useful.
+* Write a linear search method.
+* List the properties of a linear search algorithm, including run time.
+* Describe the binary search algorithm.
+* Write an iterative method that implements the binary search algorithm.
+* Write a recursive method that implements the binary search algorithm.
+* Compare and contrast linear search and binary search.
+* Measure the performance of an algorithm based on the size of input (average
+  case and worst case).
+* Compare and choose an algorithm based on performance measured in big-O
+  notation.
+* Decide when to use a binary search vs a linear search.
+* Write a method to perform an ordered insertion in an array.
+* Measure the performance of an ordered insertion algorithm with big-O notation.
+* List sorting algorithms and their performance with big-O notation.
+* Describe the insertion sort algorithm.
+* Implement the insertion sort algorithm for an array of integers.
+* Describe the selection sort algorithm.
+* Implement the selection sort algorithm for an array of integers.
+* Describe the recursive merge sort algorithm.
+* Describe the quick sort algorithm.
+* Explain why choosing a poor pivot reduces the overall performance of the quick
+  sort algorithm.
 
 ### Week 13: Advanced sorting, review
 
+**Note**: Advanced sorting is in the week 12 lecture notes. No new outcomes are
+derived for review classes.
