Update todo list.

--- a/existing/COMP 1020.md
+++ b/existing/COMP 1020.md
@@ -16,7 +16,8 @@ Tasks
 -----
 
 * [X] Contact Olivier
-* [ ] Extract outcomes from Olivier's Fall 2019 offering.
+* [X] Extract outcomes from Olivier's Fall 2019 offering.
+* [ ] Check that outcomes align with assessment material.
 
 Course objectives
 -----------------
