Finished first cut of outcomes for COMP 1012.

--- a/existing/COMP 1012.md
+++ b/existing/COMP 1012.md
@@ -17,5 +17,113 @@ Sources of information
 Tasks
 -----
 
-* [ ] Contact Rob 
+* [X] Get learning outcomes from course schedule winter 2019.
+* [ ] Compare learning outcomes to evaluation tools for alignment.
 
+Course objectives
+-----------------
+
+What are the major objectives for a student taking this course?
+
+* Gain basic programming skills by writing programs in the Python programming
+  language.
+* Describe basic programming concepts and constructs in plain English.
+* Get a better idea of how we communicate ideas in a way that computers can
+  understand and act on.
+* Write programs to process data and conduct statistical analyses.
+* Use specialized tools to solve computationally difficult operations (matrices,
+  numeric processing).
+
+Learning outcomes
+-----------------
+
+### Week 0: Introductions
+
+* Briefly describe "computer science".
+* Use an IDE to write and run a very simple Python program.
+
+### Week 1: Basics
+
+* Evaluate arithmetic expressions written in Python.
+* Define, assign, and print the value of variables in a Python program.
+* Explain the differences between primitive data types in Python (`int`,
+  `float`, and `str`).
+
+### Week 2: Strings and basic I/O
+
+* Explain the difference between a string and a number.
+* List properties of strings (i.e., immutability, indices, length)
+* Write a program that gets input from the keyboard (`input`).
+* Use format codes to print messages containing variables.
+* Convert strings to numeric types with the `int` and `float` functions.
+
+### Week 3: Files and iteration
+
+* Write a program to open a file and read the contents of a file.
+* Write a program that uses a loop to iterate over lines in a text file.
+* Apply basic numeric processing to the contents of a file.
+* Use the `split` function to separate records in a delimited file.
+
+### Week 4: Representing information
+
+* Compare and contrast primitive data types (`int`, `float`, `str`) and
+  sequences (`list`, `tuple`, `str`).
+* Use sequences to solve a problem.
+* Compare and contrast sequences (`list`, `tuple`, `str`) with collections
+  (`set`, `dict`).
+* Use collections in a program to solve a problem.
+* Iterate over lists in multiple different ways (`for`each, `range`, `enumerate`).
+
+### Week 5: Booleans, conditionals, and `while` loops.
+
+* Compare number types with relational operators.
+* Create and evaluate boolean expressions.
+* Execute code 0 or 1 times with a conditional statement (`if` and `elif`).
+* Execute code 0 or more times with a `while` loop.
+* Decide which kind of looping structure (`for` or `while`) is appropriate for a
+  problem.
+
+### Week 6: Random numbers and functions
+
+* Explain the difference between truly random and pseudo random numbers.
+* Use random numbers in a simple simulation.
+* Create and use a user-defined function that accepts no parameters.
+* Create and use a user-defined function that accepts one or more parameters.
+* Define the terms "pass-by-value" and "pass-by-reference".
+* Write a function that modifies the data passed to it, by reference.
+
+### Week 7: Introduction to numpy
+
+* Choose the appropriate numpy data type for a given problem.
+* Import and use external libraries for advanced processing in a Python program.
+* Compare and contrast built-in Python sequence types (`list`, `tuple`, `str`)
+  with numpy arrays.
+* Create numpy arrays using the `array`, `arange`, and `linspace` functions.
+
+### Week 8: Multidimensional arrays
+
+* Explain how numpy arrays are *fundamentally* different from sequences.
+* Create and use multidimensional numpy arrays to solve a problem.
+
+### Week 9: Recursion
+
+* Write a program that traverses a file/folder structure with recursion.
+* Write and call a recursive function in Python.
+
+### Week 10: Recursion and file systems
+
+* Create a recursive algorithm for a given problem.
+* Find a file in a file/folder structure with recursion.
+* Create and read a file. :duplicate:
+
+### Week 11: Plotting and pandas
+
+* Plot numpy data with matplotlib.
+* Create and use a `DataFrame` in pandas.
+* Create a calculated column in a pandas `DataFrame`.
+* Do joins and aggregation on columns in a pandas `DataFrame`.
+
+### Week 12: Instructor choice
+
+No formal, testable outcomes are presented in this week. The week only had one
+class, so could have been given as a "review" class.
