Outcomes for COMP 1500.

--- a/existing/COMP 1500.md
+++ b/existing/COMP 1500.md
@@ -51,31 +51,88 @@ Learning outcomes
 * Given a Turing machine and tape, evaluate the output of a Turing machine.
 * Label all of the components of a von Neumann machine.
 * Classify contemporary computer components to the von Neumann architecture.
+* List at least four areas of theoretical computer science.
+* Distinguish the terms computer from computation.
+* Represent properties about an object.
+* Represent relationships between objects.
+* Define the term "abstraction".
+* List abstractions from the real world.
+* Identify the *interface* between abstractions in the real world.
+* Describe a problem in terms of inputs, outputs, and instructions to solve.
+* Provide an example of an important historical figure in computing and explain
+  the contribution that person made to the field.
+
 
 ### Representing information digitally
 
-* Convert numbers between base systems.
+* List at least 3 different [digital numeral systems].
+* Convert numbers between [digital numeral systems].
+* Explain how *switches* can represent complex information.
+* List and define the terms: "Bytes" and "nibbles".
+* Represent text as numbers.
+* Explain the how "data standards" are important to facilitate communication.
 * Explain how an image can be stored digitally.
+* Encode an image (black and white, grayscale, and colour) digitally and by
+  hand.
 * Explain how formats and encodings are important for communication.
 * Predict how an animation might be stored digitally.
 
+[digital numeral systems]: https://en.wikipedia.org/wiki/Radix
+
 ### How computers function
 
+* Evaluate Boolean expressions.
+* Draw a truth table for a Boolean operator (e.g., XOR).
+* Evaluate arithmetic expressions in binary (e.g., addition).
+* Explain how logical operators can be implemented as a circuit with switches.
+* Translate circuits into logical expressions.
+* Explain how logical operators can be implemented as a circuit.
+* Draw a circuit diagram for a logical expression.
+* Draw a half-adder.
+* Show the state of parts of a half-adder circuit.
+* Draw a full-adder.
+* Explain how half- and full-adders work.
 * Find errors in a circuit.
 * Translate a plain-English problem into a flow diagram.
 * Translate a boolean expression into a circuit.
 * Predict the output of a circuit given specific inputs.
+* Determine the purpose of a circuit (limited to arithmetic).
 * Explain how a circuit can make a decision.
 * Explain why abstractions are necessary to hide complexity.
+* Define the term "ALU".
+* Explain the purpose of an ALU in a CPU.
+* Define the term "opcodes".
+* Define the term "assembly language".
+* Explain why using an assembly language is preferable to using binary to
+  issue instructions to an ALU.
+* Define the term "memory" in terms of computing.
+* Give a physical example of temporary memory (i.e., pencil and paper).
+* Compare and contrast primary memory and secondary memory.
+* List kinds of data that can be stored in memory.
+* Explain how memory can be addressed.
+* Explain the difference between memory and registers (physical location).
+* Explain how data is moved from memory to registers.
+* Define the term "control unit".
+* Explain the purpose of a control unit in a CPU.
+* Explain how a control unit can be instructed on what to do.
+* Define the term "sequential programming".
+* Write a simple, sequential program in a simple assembly language (including
+  I/O, conditional and unconditional branching).
+* Describe the relationship between Turing machines and the von Neumann
+  architecture.
 
 ### Apply problem-solving skills
 
 * Define the term algorithm.
 * Divide a big problem into smaller steps.
+* Search for a piece of data with at least 2 different search algorithms.
+* Compare and contrast linear search and binary search.
 * Decide whether or not a computer can solve a problem.
 * Explain how run-time complexity is used to measure the "goodness" of an
   algorithm.
 * Rank searching algorithms by run-time complexity.
+* Sort information with at least two simple sorting algorithms.
+* Measure the complexity of two simple sorting algorithms.
 * Compare and contrast P and NP.
 
 ### Implement abstractions as software
@@ -83,5 +140,71 @@ Learning outcomes
 * Find errors in a program in a simple programming language.
 * Rewrite a plain-English solution as a program in a simple programming
   language.
+* Define the term "high-level language".
+* Compare and contrast "high-level programming languages" and "assembly
+  languages".
+* Explain the purpose of a "compiler" in a high-level programming language.
+* Create a simple, sequential program in a high-level visual programming
+  language (e.g., Scratch), including variables, Boolean expressions,
+  conditional statements, looping structures, custom blocks (functions), I/O,
+  and random numbers.
+* Describe the relationship between conditional and unconditional branching and
+  conditional statements/looping structures.
   
+### Topics in CS
+
+#### Bioinformatics
+
+* List the four chemicals in DNA.
+* Define the terms "base", "codon", "protein", "gene", "genome".
+* Give examples of what genes express (structure, signals).
+* Give examples of what a microbiologist is interested in studying, and explain
+  why a microbiologist cannot study those things manually.
+* Define the term "sequencer", and "assembly".
+* Describe the sequencing process at a high level.
+* Describe "reference-based assembly".
+* Find the optimal alignment of a read to a genome, by hand.
+* Determine the consensus sequence for a genome given a pileup in a
+  reference-based assembly.
+* List the limitations of "reference-based assembly".
+* Describe "de novo assembly".
+* Define the term "graph" in terms of "nodes" and "edges".
+* Define the term "de Bruijn graph".
+* Explain how a de Bruijn graph can be used to solve the de novo assembly
+  problem.
+* Draw a de Bruijn graph for a specific set of reads for a specified value of
+  $k$.
+* Build a consensus sequence for a given de Bruijn graph.
+* Describe a sequence alignment algorithm.
+* Define the term "dynamic programming".
+* Fill in a dynamic programming table for an alignment algorithm
+  (Needleman-Wunsh).
+* Extract the optimal alignment for a pair of sequences from a dynamic
+  programming table.
+  
+#### Cryptography
+
+* Define the term "cryptography".
+* Give examples of when cryptography is used.
+* Define the terms "plaintext", "cipher", "ciphertext", "encryption",
+  "decryption", "shared secret cryptography", "public key cryptography",
+  "cryptanalysis", "brute-force analysis", "one-time pad".
+* Encrypt and decrypt a message with a Caesar cipher.
+* Determine the key for a ciphertext given only the ciphertext by frequency
+  analysis.
+* Explain why brute-force analysis is not a generally reasonable solution to
+  decrypting a message.
+* Compare and contrast the search space of the Caesar cipher with a one-time
+  pad.
+* Compare and contrast "pseudorandom" and "truly random" numbers.
+* Compare and contrast shared secret cryptography with public key cryptography.
+* Briefly explain the process of public key cryptography.
+
+#### Artificial intelligence
+
+Focusing on artificial neural networks.
+
+* Identify the parts of a neural network given a diagram.
+* Explain how a neural network is trained.
+
 
