Assignment and exam outcomes for COMP 1010.

--- a/existing/COMP 1010.md
+++ b/existing/COMP 1010.md
@@ -410,3 +410,93 @@ None listed.
 #### Unit 23: Using Processing in Java
 
 * Use Processing as a library in a Java program.
+
+### Assignments
+
+#### Assignment 1
+
+* Create and run a simple, sequential program that uses named constants and
+  variables and produces output.
+* Create and run a simple, sequential program that responds to input.
+* Create and run a simple, sequential program that contains *prescribed*
+  user-defined functions. Students are explicitly **not** asked to decompose a
+  problem. User-defined functions accept no parameters and do not return data.
+  
+#### Assignment 2
+
+In addition to learning outcomes from assignment 1:
+
+* Decompose a *structured* problem into user-defined functions. Students are not
+  provided with function names. User-defined functions accept not parameters and
+  do not return data.
+* Decide how much functionality belongs in a user-defined function.
+* Use conditional statements with complex logical expressions in a program to
+  modify behaviour based on input.
+* Use trigonometric functions and random numbers to generate vectors in a game.
+* Apply a simple collision detection algorithm to objects in a program.
+* Use file-scope variables to track the state of a program.
+* Write code that adheres to programming standards.
+* Use complex conditional statements with `else` and `else if` blocks.
+
+#### Assignment 3
+
+In addition to learning outcomes from assignment 2:
+
+* Write a program that uses nested looping structures. May be a combination of
+  `for` and `while`.
+* Use an unfamiliar function in a program by finding and understanding
+  language-specific documentation.
+* Write a program that uses complex nested structures, combining loops and
+  conditional statements.
+  
+#### Assignment 4
+
+In addition to learning outcomes from assignment 3:
+
+* Write user-defined functions that accept one or more parameters of primitive
+  type variables.
+* Write user-defined functions that return data.
+* Use integer arithmetic, casting, and modulo in an expression.
+* Use sentinel values to communicate exceptional state.
+
+#### Assignment 5
+
+In addition to the learning outcomes from assignment 4:
+
+* Create and use an array.
+* Use "parallel" arrays to contain compound information for a single entity.
+* Write user-defined functions that accept one or more parameters of both
+  primitive and array type variables.
+* Implement a linear search algorithm over an array.
+* Use a "partially filled" array. Track the state of a "partially filled" array
+  with a "pointer".
+* Write a function that treats a parallel array as a set. (no duplicates)
+
+### Exams
+
+#### Term test
+
+* Compare and contrast variables and named constants.
+* Identify if a provided code snippet has an error, and explain what the error
+  is.
+* Evaluate simple arithmetic expressions by hand, including predicting the
+  correct data type.
+* Evaluate the execution of a simple, sequential program.
+* Identify the correct declaration of a function from a list of potential
+  function declarations.
+* Evaluate complex logical expressions with logical and relational operators.
+* Evaluate the execution of a complex conditional control structure.
+* Evaluate the execution of string methods.
+* Evaluate the execution of a complex expression with relation to order of
+  operations and operator precedence.
+* Write a simple, sequential program with arithmetic expressions.
+* Write a simple, sequential program that uses named constants, file-scoped
+  variables, and integer arithmetic.
+* Write a simple function that accepts no parameters and returns no data.
+* Write complex conditional structures.
+* Use file-scope variables to manage state.
+* Explicitly cast the result of an expression to a data type with a smaller
+  range.
+* Use functions from the Processing standard library *without* supporting
+  documentation. :processing:
+* Represent colours using the RGB model.
