Outcomes for COMP 1010 from evaluation material complete.

--- a/existing/COMP 1010.md
+++ b/existing/COMP 1010.md
@@ -500,3 +500,47 @@ In addition to the learning outcomes from assignment 4:
 * Use functions from the Processing standard library *without* supporting
   documentation. :processing:
 * Represent colours using the RGB model.
+
+#### Final exam
+
+* Evaluate the execution of a *Processing* program, visually, and by hand.
+* List the order of operations of "global variables", `draw()`, and `setup()` in
+  a Processing program.
+* Evaluate simple arithmetic expressions by hand, including predicting the
+  correct data type.
+* Write a statement that completes a program, that includes an arithmetic
+  expression.
+* Write a statement that declares a boolean variable and initializes it with the
+  result of a complex logical expression.
+* Write conditional statements around existing blocks of code that satisfy some
+  logical constraint.
+* Rewrite a `while` loop as a `for` loop.
+* Evaluate the execution of a looping structure, by hand.
+* Use `String` methods in a statement to isolate and print specific characters.
+* Evaluate complex expressions that include typecasting and `String` appending.
+* Translate a math formula into a function.
+* Evaluate the execution of a complex program with multiple functions.
+* Iterate over an array of data and accumulate a result.
+* Create, initialize, and use an array in a program.
+* Write a function that works with a partially filled array.
+* Write code that compares `String`s for equality.
+* Write a simple, sequential program with arithmetic expressions, variables,
+  and function calls.
+* Use functions from the Processing standard library *without* supporting
+  documentation. :processing:
+* Use file-scope variables to maintain state of a program.
+* Write a program that would draw provided images if the code were to be
+  executed in the Processing environment.
+* Identify when to use typecasting in an expression.
+* Choose the appropriate data type for a variable.
+* Write a program that handles user input.
+* Write a program with conditional control structures.
+* Write a program with complex logical expressions.
+* Write a program with nested `for` loops.
+* Write a program that generates random numbers.
+* Complete a function that treats a `String` as a set.
+* Convert between `String` types and number types.
+* Write functions that accept parameters and return data.
+* Use integer arithmetic and modulus in a program.
+* Write a function that accepts arrays as parameters and returns an array.
+* Write a program that uses parallel arrays.
