Numbered objectives for 1010, starting to make database of outcomes.

--- a/existing/COMP 1010.md
+++ b/existing/COMP 1010.md
@@ -17,20 +17,20 @@ Tasks
 * [X] Contact Heather 2020-01-07
 * [X] Extract outcomes from Jim's book.
 * [X] Extract course objectives from Jim's book.
-* [ ] Make sure that learning objectives in the book align with course material
-      shared.
+* [X] Extract learning objectives from shared course material.
+* [ ] Put learning objectives into a database.
 
 Course objectives
 -----------------
 
 What are the major objectives for a student taking this course?
 
-* Gain basic programming skills by writing programs using the Processing
-  programming environment.
-* Describe basic programming concepts and constructs in plain English. 
-* Get a better idea of how we communicate ideas in a way that computers can
-  understand and act on.
-* Begin to think abstractly by visiting algorithms *before* coding them.
+1. Gain basic programming skills by writing programs using the Processing
+   programming environment.
+2. Describe basic programming concepts and constructs in plain English. 
+3. Get a better idea of how we communicate ideas in a way that computers can
+   understand and act on.
+4. Begin to think abstractly by visiting algorithms *before* coding them.
 
 Learning outcomes
 -----------------
