--- a/existing/COMP 1020.md
+++ b/existing/COMP 1020.md
@@ -348,3 +348,19 @@ just examples of how to apply outcomes from week 7.
 
 **Note**: Advanced sorting is in the week 12 lecture notes. No new outcomes are
 derived for review classes.
+
+Assignments
+-----------
+
+### Assignment 1
+
+* Write multiple, related classes with instance variables and methods, given
+  explicit descriptions of what those classes look like.
+* Use provided code to evaluate own code.
+* Decompose a problem into methods given *some* description.
+
+### Assignment 2
+
+In addition to the learning outcomes from assignment 1:
+
+* 
