--- a/existing/COMP 1010.md
+++ b/existing/COMP 1010.md
@@ -171,7 +171,7 @@ What might be missing, or more general learning outcomes:
 #### Unit 9: Data Types and Memory
 
 * Make integer or floating point variables that use more or less memory.
-  :abiguous:
+  :ambiguous:
 * Convert between data types using explicit and implicit casts.
 
 **Note**: section 9.2 is marked as "Advanced" and explains bits and bytes at a
