--- a/existing/COMP 1010.md
+++ b/existing/COMP 1010.md
@@ -69,7 +69,7 @@ What might be missing, or more general learning outcomes:
 * Apply order of operations to figure out the result of a calculation.
   :prerequisite: :high-school:
 * Use the built-in `println` command to look inside variables for investigating
-  your errors. :processing:
+  your errors, debug your program. :processing:
   
 What might be missing, or more general learning outcomes:
 
