Reviewing outcomes for 1010.

--- a/existing/COMP 1010.md
+++ b/existing/COMP 1010.md
@@ -18,39 +18,42 @@ Tasks
 * [X] Extract outcomes from Jim's book.
 * [X] Extract course objectives from Jim's book.
 * [X] Extract learning objectives from shared course material.
-* [ ] Put learning objectives into a database.
+* [ ] ~~Put learning objectives into a database.~~
+* [ ] Organize objectives into categories.
 
-Course objectives
------------------
+Course outcomes
+---------------
 
 What are the major objectives for a student taking this course?
 
-1. Gain basic programming skills by writing programs using the Processing
-   programming environment.
-2. Describe basic programming concepts and constructs in plain English. 
+1. Gain basic programming skills by writing programs using ~~the Processing~~ a
+   structured programming environment. :program:
+2. Describe basic programming concepts and constructs in plain English.
+   :communicate:
 3. Get a better idea of how we communicate ideas in a way that computers can
-   understand and act on.
+   understand and act on. :represent:
 4. Begin to think abstractly by visiting algorithms *before* coding them.
+   :abstract:
 
-Learning outcomes
------------------
+Learning objectives
+-------------------
 
 ### Section 1: Getting started
 
 #### Unit 1: Introduction
 
-* Explain to a layperson what computer programming is
+* Explain to a layperson what computer programming is. :communicate:
 * Calculate how many operations a computer can perform each second based on its
-  specifications
+  specifications :represent: :not-evaluated:
 
 #### Unit 2: Processing and Programming Basics
 
-* Choose and set the canvas size for your programs. :processing:
-* Set the location where shapes are drawn on the canvas. :processing:
+* Choose and set the canvas size for your programs. :processing: :program:
+* Set the location where shapes are drawn on the canvas. :processing: :program:
 * Set the background, outline, and fill colors of your canvas and shapes.
-  :processing:
-* Draw lines, circles, ellipses, triangles, and points. :processing:
-* Insert in-line and block comments to describe your program.
+  :processing: :program:
+* Draw lines, circles, ellipses, triangles, and points. :processing: :program:
+* Insert in-line and block comments to describe your program. :program:
 
 What might be missing, or more general learning outcomes:
 
