Add small pandoc filter script to mark outcome tags in objectives.

--- a/reconsidered/COMP1010.md
+++ b/reconsidered/COMP1010.md
@@ -25,14 +25,14 @@ Course outcomes {-}
 
 By the end of this course, a student should be able to:
 
-1. [Write and run moderately complex programs using a procedural programming
-   language.]{#program}
-2. [Read and evaluate written programs.]{#evaluate}
-3. [Describe basic programming concepts and structures in plain
-   English.]{#communicate}
-4. [Represent ideas and information in a way that computers can understand and
-   act on.]{#represent}
-5. [Analyze and implement basic searching algorithms.]{#abstract}
+1. Write and run moderately complex programs using a procedural programming
+   language. :program:
+2. Read and evaluate written programs. :evaluate:
+3. Describe basic programming concepts and structures in plain English.
+   :communicate:
+4. Represent ideas and information in a way that computers can understand and
+   act on. :represent:
+5. Analyze and implement basic searching algorithms. :abstract:
 
 \setcounter{section}{1009}
 
@@ -45,9 +45,9 @@ Unit 1
 By the end of this unit, students should be able to:
 
 1. Use an integrated development environment (IDE) to write and run a simple,
-  linear program using a procedural programming language. [program](#program)
-    1. Use *literal values* in a program. :program:
-    2. Describe what a program does using comments in code. :program:
+  linear program using a procedural programming language. :program:
+    1. Use *literal values* in a program.
+    2. Describe what code does using *comments*.
   
 IDE
 : Software that simplifies writing software in a *specific* programming
@@ -63,3 +63,30 @@ language.
 [Processing]: https://processing.org/
 [DrJava]: http://drjava.org/
 [Spyder]: https://www.spyder-ide.org/
+
+### Unit 1, Processing-specific
+
+By the end of this unit, students should be able to:
+
+1. Draw points, lines, and shapes on the Processing canvas.
+2. Change properties of shapes and the canvas, like background colour, outline
+   colour, fill colour, size, and position.
+
+Unit 2
+------
+
+By the end of this unit, students should be able to:
+
+1. Declare and use a variable in a program to represent information.  :program:
+2. Initialize a variable using a literal value. :program:
+3. Evaluate arithmetic expressions (&plus;, &minus;, &times;, &divide;, mod)
+   that include both literal values and variables. :program: :evaluate:
+4. Explain the purpose of the modulus operator. :communicate:
+    1. List uses of the modulus operator.
+5. Debug simple errors by inspecting the value of a variable as the program is
+   running. :program:
+   
+Unit 3
+------
+
+
